# OSC-QuestUnity-ESP-Sample

./: .gitignore  LICENSE  README.md
Assets/Scenes/: SampleScene.unity
Assets/Scripts/: SendMessage.cs
Assets/Scripts/ESP32OSC/OSCreceive/: OSCreceive.ino
Assets/Scripts/PythonOSCtest/: README.md  pyproject.toml
Assets/Scripts/PythonOSCtest/src/test/: osc_receive.py
Assets/XR/: XRGeneralSettingsPerBuildTarget.asset
Assets/XR/Settings/: OpenXR Package Settings.asset
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
